# fvm-wasm-instrument

./: Cargo.toml  README.md
benches/: benches.rs
src/: export_globals.rs  lib.rs
src/gas_metering/: mod.rs  validation.rs
src/gas_metering_v2/: mod.rs  validation.rs
src/stack_limiter/: max_height.rs  mod.rs  thunk.rs
src/utils/: mod.rs  translator.rs
tests/: diff.rs  overhead.rs
tests/expectations/gas/: branch.wat  call.wat  ifs.wat  simple.wat  start.wat
tests/expectations/stack-height/: many_locals.wat
