[package]
name = "fvm-wasm-instrument"
version = "0.2.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["Parity Technologies <admin@parity.io>", "Protocol Labs", "Filecoin Core Devs"]
license = "MIT OR Apache-2.0"
description = "Instrument and transform wasm modules."
keywords = ["wasm", "blockchain", "gas-metering", "fvm", "filecoin"]
categories = ["wasm", "no-std"]
repository = "https://github.com/filecoin-project/fvm-wasm-instrument"
include = ["src/**/*", "LICENSE-*", "README.md"]

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[profile.bench]
lto = "fat"
codegen-units = 1

[dependencies]
wasmprinter = "0.2"
wasm-encoder = "0.17.0"
wasmparser = "0.91.0"
anyhow = "1.0.65"

[dev-dependencies]
binaryen = "0.12"
criterion = "0.3"
diff = "0.1"
rand = "0.8"
wat = "1"

[features]
default = ["std"]
std = []
